--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
+    "leven": "^4.0.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
