--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test5",
+  "name": "greennorwayminside",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,15 @@
   "dependencies": {
     "@azure/msal-node": "^2.14.0",
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "greennorwayminside": "file:",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "leven": "^4.0.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
